--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -32,7 +32,7 @@ permalink: 'contact/'
 
     <section id="cs-contact">
         <div class="cs-container">
-            <form id="cs-form" name="Contact Form" method="post" data-netlify="true">
+            <form id="cs-form" name="Contact Form" method="post" netlify>
                 <div class="cs-content">
                     <span class="cs-topper">Contact Us</span>
                     <h2 class="cs-title">Have A Question?</h2>
