--- a/src/content/pages/schedule.html
+++ b/src/content/pages/schedule.html
@@ -33,7 +33,7 @@ eleventyNavigation:
             <a href="mailto:info@coupleconnectionsd.com" class="cs-link">info@coupleconnectionsd.com</a>
         </div>
         <!--Form-->
-        <form id="cs-form-485" name="15 Minute Consultation Form" method="post" data-netlify="true">
+        <form id="cs-form-485" name="15 Minute Consultation Form" method="post" netlify>
             <h3 class="cs-h3">Request A Free Consultation</h3>
             <label class="cs-label">
                 Full Name
