--- a/src/index.html
+++ b/src/index.html
@@ -654,7 +654,7 @@ eleventyNavigation:
     <div class="cs-container">
         <div class="cs-content">
             <span class="cs-topper">Testimonials</span>
-            <h2 class="cs-title">What Our Client’s Say</h2>
+            <h2 class="cs-title">What Our Clients Say</h2>
         </div>
         <div class="cs-review">
             <!--Quote-->
