--- a/src/content/pages/schedule.html
+++ b/src/content/pages/schedule.html
@@ -55,7 +55,7 @@ eleventyNavigation:
                     <option value="family therapy">Family Therapy</option>
                 </select>
             </label>
-            <button class="cs-button-solid cs-submit" type="submit">Request A Free Consultation</button>
+            <button class="cs-button-solid cs-submit" type="submit">Submit</button>
         </form>
     </div>
     <!--Background Image-->
