--- a/src/index.html
+++ b/src/index.html
@@ -238,7 +238,7 @@ eleventyNavigation:
         </div>
         <ul class="cs-card-group">
             <li class="cs-item">
-                <a href="" class="cs-link">
+                <a href="/services" class="cs-link">
                     <picture class="cs-picture" aria-hidden="true">
                         <source media="(max-width: 600px)" srcset="https://murrieta-therapy.b-cdn.net/Couples-Therapy-Lakes-Therapy-and-Counseling-Center.jpg">
                         <source media="(min-width: 601px)" srcset="https://murrieta-therapy.b-cdn.net/Couples-Therapy-Lakes-Therapy-and-Counseling-Center.jpg">
@@ -251,7 +251,7 @@ eleventyNavigation:
                 </a>
             </li>
             <li class="cs-item">
-                <a href="" class="cs-link">
+                <a href="/services" class="cs-link">
                     <picture class="cs-picture" aria-hidden="true">
                         <source media="(max-width: 600px)" srcset="https://murrieta-therapy.b-cdn.net/Individual-Therapy-Lakes-Therapy-and-Counseling-Center.jpg">
                         <source media="(min-width: 601px)" srcset="https://murrieta-therapy.b-cdn.net/Individual-Therapy-Lakes-Therapy-and-Counseling-Center.jpg">
@@ -264,7 +264,7 @@ eleventyNavigation:
                 </a>
             </li>
             <li class="cs-item">
-                <a href="" class="cs-link">
+                <a href="/services" class="cs-link">
                     <picture class="cs-picture" aria-hidden="true">
                         <source media="(max-width: 600px)" srcset="https://murrieta-therapy.b-cdn.net/Family-Therapy-Lakes-Therapy-and-Counseling-Center.jpg">
                         <source media="(min-width: 601px)" srcset="https://murrieta-therapy.b-cdn.net/Family-Therapy-Lakes-Therapy-and-Counseling-Center.jpg">
