--- a/src/content/pages/schedule.html
+++ b/src/content/pages/schedule.html
@@ -49,7 +49,7 @@ eleventyNavigation:
             </label>
             <label class="cs-label cs-label-message">
                 What type of therapy are you interested in?
-                <select name="cars" id="cs-select-485">
+                <select name="Interest" id="cs-select-485">
                     <option value="couples therapy">Couples Therapy</option>
                     <option value="individual therapy">Individual Therapy</option>
                     <option value="family therapy">Family Therapy</option>
