--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 ---
-title: 'Pixel Perfect Websites'
+title: 'Couples Therapy in Murrieta, CA - Lakes Therapy and Counseling Center'
 description: 'Meta description for the page'
 preloadImg: 'https://murrieta-therapy.b-cdn.net/Lake-Therapy-and-Counseling-Center-Murrieta-CA.jpg'
 permalink: '/'
