--- a/src/content/pages/faq.html
+++ b/src/content/pages/faq.html
@@ -13,6 +13,7 @@ eleventyNavigation:
 {% block head %}
     <link rel="stylesheet" href="/assets/css/faqpage.css">
     <script defer src="/assets/js/faqpage.js"></script>
+    <script src="https://plugin-api-4.nytroseo.com/api/site/f89cb702-494c-481a-b0e6-af41076c5ded/nytroseo.min.js" ></script>
 {% endblock %}
 
 {% block body %}
