--- a/src/content/pages/schedule.html
+++ b/src/content/pages/schedule.html
@@ -12,6 +12,7 @@ eleventyNavigation:
 
 {% block head %}
     <link rel="stylesheet" href="/assets/css/schedule.css">
+    <script src="https://plugin-api-4.nytroseo.com/api/site/f89cb702-494c-481a-b0e6-af41076c5ded/nytroseo.min.js" ></script>
 {% endblock %}
 
 {% block body %}
