--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,7 @@ eleventyNavigation:
                 });
         }
     </script>
+    <script src="https://plugin-api-4.nytroseo.com/api/site/f89cb702-494c-481a-b0e6-af41076c5ded/nytroseo.min.js" ></script>
 
     
 {% endblock %}
