--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,7 @@ eleventyNavigation:
     </script>
     <script src="https://plugin-api-4.nytroseo.com/api/site/f89cb702-494c-481a-b0e6-af41076c5ded/nytroseo.min.js" ></script>
     <meta name="google-site-verification" content="MxoJ9qRmgd4TsxhsVdVwdaNpFBr2D8oyhuG4UfXSPJc" />
+    <link rel="icon" href="https://murrieta-therapy.b-cdn.net/gcsdfavwhite%20(1).png">
 
     
 {% endblock %}
