--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -10,6 +10,15 @@ permalink: 'contact/'
 {% block head %}
     <link rel="stylesheet" href="/assets/css/contact.css">
     <script src="https://plugin-api-4.nytroseo.com/api/site/f89cb702-494c-481a-b0e6-af41076c5ded/nytroseo.min.js" ></script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-47SC5QRPEQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-47SC5QRPEQ');
+</script>
 {% endblock %}
 
 {% block body %}
