--- a/src/content/pages/faq.html
+++ b/src/content/pages/faq.html
@@ -14,6 +14,15 @@ eleventyNavigation:
     <link rel="stylesheet" href="/assets/css/faqpage.css">
     <script defer src="/assets/js/faqpage.js"></script>
     <script src="https://plugin-api-4.nytroseo.com/api/site/f89cb702-494c-481a-b0e6-af41076c5ded/nytroseo.min.js" ></script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-47SC5QRPEQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-47SC5QRPEQ');
+</script>
 {% endblock %}
 
 {% block body %}
