--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,15 @@ eleventyNavigation:
     <script src="https://plugin-api-4.nytroseo.com/api/site/f89cb702-494c-481a-b0e6-af41076c5ded/nytroseo.min.js" ></script>
     <meta name="google-site-verification" content="MxoJ9qRmgd4TsxhsVdVwdaNpFBr2D8oyhuG4UfXSPJc" />
     <link rel="icon" href="https://murrieta-therapy.b-cdn.net/gcsdfavwhite%20(1).png">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-47SC5QRPEQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-47SC5QRPEQ');
+</script>
 
     
 {% endblock %}
