--- a/src/content/pages/faq.html
+++ b/src/content/pages/faq.html
@@ -1,6 +1,6 @@
 ---
 title: 'FAQ'
-description: 'Meta description for the page'
+description: ''
 preloadImg: '/assets/images/cabinets2.jpg'
 permalink: 'faq/'
 eleventyNavigation:
@@ -13,7 +13,7 @@ eleventyNavigation:
 {% block head %}
     <link rel="stylesheet" href="/assets/css/faqpage.css">
     <script defer src="/assets/js/faqpage.js"></script>
-    <script src="https://plugin-api-4.nytroseo.com/api/site/f89cb702-494c-481a-b0e6-af41076c5ded/nytroseo.min.js" ></script>
+    <script src="https://plugin-api-4.nytroseo.com/api/site/31aac8af-082d-49bb-9474-11f3921770ff/nytroseo.min.js" ></script>
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-47SC5QRPEQ"></script>
 <script>
