--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 ---
 title: 'Couples Therapy in Murrieta, CA - Lakes Therapy and Counseling Center'
-description: 'Meta description for the page'
+description: ''
 preloadImg: 'https://murrieta-therapy.b-cdn.net/Lake-Therapy-and-Counseling-Center-Murrieta-CA.jpg'
 permalink: '/'
 eleventyNavigation:
@@ -32,7 +32,7 @@ eleventyNavigation:
                 });
         }
     </script>
-    <script src="https://plugin-api-4.nytroseo.com/api/site/f89cb702-494c-481a-b0e6-af41076c5ded/nytroseo.min.js" ></script>
+    <script src="https://plugin-api-4.nytroseo.com/api/site/31aac8af-082d-49bb-9474-11f3921770ff/nytroseo.min.js" ></script>
     <meta name="google-site-verification" content="MxoJ9qRmgd4TsxhsVdVwdaNpFBr2D8oyhuG4UfXSPJc" />
     <link rel="icon" href="https://murrieta-therapy.b-cdn.net/gcsdfavwhite%20(1).png">
     <!-- Google tag (gtag.js) -->
