--- a/src/index.html
+++ b/src/index.html
@@ -114,7 +114,7 @@ eleventyNavigation:
                     <img class="cs-graphic" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/green-shape.svg" alt="shape" width="48" height="48">
                 </div>
                 <div class="cs-flex">
-                    <h2 class="cs-h2">Enahnced Intimacy</h2>
+                    <h2 class="cs-h2">Enhanced Intimacy</h2>
                     <p class="cs-item-text">
                         Reignite the spark of closeness and connection, deepening the emotional and physical ties that unite you.
                     </p>
