--- a/src/content/pages/services.html
+++ b/src/content/pages/services.html
@@ -52,9 +52,9 @@ eleventyNavigation:
         </picture>
         <div class="cs-content">
             <span class="cs-topper">Lakes Therapy and Counseling Center</span>
-            <h2 class="cs-title">Couples Therapy</h2>
+            <h2 class="cs-title">Couples Therapy Murrieta</h2>
             <p class="cs-text">
-                At Lakes Therapy and Counseling Center, we understand that every relationship has its unique set of challenges and strengths. Our Couples Therapy service, also widely recognized as Marriage Counseling, is designed to provide you and your partner with the tools and insights needed to enhance your communication, deepen your connection, and resolve conflicts in a constructive manner.
+                At Lakes Therapy and Counseling Center in Murrieta, CA, we understand that every relationship has its unique set of challenges and strengths. Our Couples Therapy service, also widely recognized as Marriage Counseling, is designed to provide you and your partner with the tools and insights needed to enhance your communication, deepen your connection, and resolve conflicts in a constructive manner.
             </p>
             <p class="cs-text">
                 Through guided discussions and strategic interventions, our expert therapists help couples rediscover their partnership's joy, intimacy, and resilience, paving the way for a more fulfilling and lasting bond. Whether you're navigating through rough patches or simply aiming to strengthen your relationship, our Couples Therapy sessions are tailored to meet your specific needs and goals.
@@ -65,7 +65,7 @@ eleventyNavigation:
                         <img class="cs-li-icon" aria-hidden="true" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/volunteer1.svg" decoding="async" alt="icon" width="32" height="32" loading="lazy">
                     </picture>
                     <div class="cs-flex">
-                        <h3 class="cs-h3">Marriage Counseling</h3>
+                        <h3 class="cs-h3">Marriage Counseling Murrieta</h3>
                         <p class="cs-li-text">
                             Focuses on married couples, aiming to resolve conflicts, improve communication, and rebuild a loving relationship. This specialization often addresses long-term issues and the complexities of shared life commitments.
                         </p>
@@ -76,7 +76,7 @@ eleventyNavigation:
                         <img class="cs-li-icon" aria-hidden="true" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/volunteer2.svg" decoding="async" alt="icon" width="32" height="32" loading="lazy">
                     </picture>
                     <div class="cs-flex">
-                        <h3 class="cs-h3">Relationship Therapy</h3>
+                        <h3 class="cs-h3">Relationship Therapy Murrieta</h3>
                         <p class="cs-li-text">
                             Broadly covers all types of romantic relationships, whether married or not, and focuses on improving emotional connection and understanding between partners.
                         </p>
@@ -87,7 +87,7 @@ eleventyNavigation:
                         <img class="cs-li-icon" aria-hidden="true" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/volunteer3.svg" decoding="async" alt="icon" width="32" height="32" loading="lazy">
                     </picture>
                     <div class="cs-flex">
-                        <h3 class="cs-h3">Couples Counseling</h3>
+                        <h3 class="cs-h3">Couples Counseling Murrieta</h3>
                         <p class="cs-li-text">
                             Similar to Couples Therapy, this term emphasizes working through current conflicts, enhancing communication, and strengthening the relationship. It's suitable for couples at any stage of their relationship.
                         </p>
@@ -98,7 +98,7 @@ eleventyNavigation:
                         <img class="cs-li-icon" aria-hidden="true" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/volunteer1.svg" decoding="async" alt="icon" width="32" height="32" loading="lazy">
                     </picture>
                     <div class="cs-flex">
-                        <h3 class="cs-h3">Partnership Therapy</h3>
+                        <h3 class="cs-h3">Partnership Therapy Murrieta</h3>
                         <p class="cs-li-text">
                             A term sometimes used to emphasize the teamwork involved in a relationship. It focuses on mutual goals, shared responsibilities, and the development of a stronger partnership.
                         </p>
@@ -123,9 +123,9 @@ eleventyNavigation:
         </picture>
         <div class="cs-content">
             <span class="cs-topper">Lakes Therapy and Counseling Center</span>
-            <h2 class="cs-title">Individual Therapy</h2>
+            <h2 class="cs-title">Individual Therapy Murrieta</h2>
             <p class="cs-text">
-                At Lakes Therapy and Counseling Center, our Individual Therapy service is tailored to meet the unique needs of each person, offering a path to personal growth and emotional wellness. In a supportive and confidential setting, clients can explore their inner thoughts, confront emotional challenges, and work towards overcoming personal obstacles.
+                At Lakes Therapy and Counseling Center in Murrieta, CA, our Individual Therapy service is tailored to meet the unique needs of each person, offering a path to personal growth and emotional wellness. In a supportive and confidential setting, clients can explore their inner thoughts, confront emotional challenges, and work towards overcoming personal obstacles.
             </p>
             <p class="cs-text">
                 Whether grappling with mental health issues, facing life transitions, or striving for self-improvement, our skilled therapists employ a variety of therapeutic approaches to facilitate healing and development. Individual therapy is an invaluable tool for those seeking to enhance their quality of life, providing the insights and strategies needed for personal empowerment and resilience.
@@ -194,9 +194,9 @@ eleventyNavigation:
         </picture>
         <div class="cs-content">
             <span class="cs-topper">Lakes Therapy and Counseling Center</span>
-            <h2 class="cs-title">Family Therapy</h2>
+            <h2 class="cs-title">Family Therapy Murrieta</h2>
             <p class="cs-text">
-                Family Therapy at Lakes Therapy and Counseling Center is focused on enhancing the health and dynamics of family relationships. Recognizing that families operate as interconnected systems, our therapy sessions aim to improve communication, resolve conflicts, and strengthen the bonds between family members.
+                Family Therapy at Lakes Therapy and Counseling Center in Murrieta, CA is focused on enhancing the health and dynamics of family relationships. Recognizing that families operate as interconnected systems, our therapy sessions aim to improve communication, resolve conflicts, and strengthen the bonds between family members.
             </p>
             <p class="cs-text">
                 Whether your family is navigating through a challenging period, facing transitions, or simply looking to improve your relationships, our experienced therapists use tailored strategies to address the collective needs of the family unit. Family therapy provides a supportive environment for all members to express their thoughts and feelings, fostering understanding and collaboration that lead to healthier and more fulfilling family connections.
