--- a/src/content/pages/location.html
+++ b/src/content/pages/location.html
@@ -4,7 +4,7 @@ description: ''
 preloadImg: 'https://murrieta-therapy.b-cdn.net/All-The-Benefits-of-Couples-Therapy-with-Lakes-Therapy-and-Counseling-Center.jpg'
 permalink: 'couples-therapy-murrieta/'
 eleventyNavigation:
-    key:
+    key: Location
     order: 200
 ---
 
