--- a/src/content/pages/location.html
+++ b/src/content/pages/location.html
@@ -104,8 +104,7 @@ eleventyNavigation:
                     </picture>
                     <div class="cs-flex-group">
                         <span class="cs-header">Phone</span>
-                        <a href="tel:+19514175443
-                        " class="cs-link">(951) 417-5443
+                        <a href="tel:+19514175443" class="cs-link">(951) 417-5443
                         </a>
                     </div>
                 </li>
