--- a/src/content/pages/location.html
+++ b/src/content/pages/location.html
@@ -1,24 +1,33 @@
 ---
 title: 'Couples Therapy Murrieta'
 description: ''
-preloadImg: 'https://murrieta-therapy.b-cdn.net/All-The-Benefits-of-Couples-Therapy-with-Lakes-Therapy-and-Counseling-Center.jpg'
+preloadImg: '/assets/images/cabinets2.jpg'
 permalink: 'couples-therapy-murrieta/'
 eleventyNavigation:
-    key: Location
+    key: 
     order: 200
 ---
 
 {% extends "layouts/base.html" %}
 
 {% block head %}
-    <link rel="stylesheet" href="/assets/css/location.css">
+    <link rel="stylesheet" href="/assets/css/services.css">
     <script defer src="/assets/js/locationfaq.js"></script>
     <script src="https://plugin-api-4.nytroseo.com/api/site/31aac8af-082d-49bb-9474-11f3921770ff/nytroseo.min.js" ></script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-47SC5QRPEQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-47SC5QRPEQ');
+</script>
 {% endblock %}
 
 {% block body %}
 
-<!-- ============================================ -->
+   <!-- ============================================ -->
 <!--                    Hero                      -->
 <!-- ============================================ -->
 
@@ -85,7 +94,72 @@ eleventyNavigation:
     </div>
 </section>
                                 
+<!-- ============================================ -->
+<!--                   Contact                    -->
+<!-- ============================================ -->
 
+<section id="contact-1389">
+    <div class="cs-container">
+        <div class="cs-content">
+            <span class="cs-topper">Lakes Therapy and Counseling Center in Murrieta, CA</span>
+            <h2 class="cs-title">Serving Murrieta, CA and the Surround Communities</h2>
+            <p class="cs-text">
+                Nestled in the heart of Murrieta, CA, Lakes Therapy and Counseling Center offers a tranquil setting for expert marriage counseling and couples therapy, helping local residents build stronger relationships and happier lives.
+            </p>
+            <ul class="cs-ul">
+                <li class="cs-li">
+                    <picture class="cs-icon-wrapper">
+                        <img aria-hidden="true" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/phone-76.svg" alt="phone icon" class="cs-icon" width="40" height="40" decoding="async">
+                    </picture>
+                    <div class="cs-flex-group">
+                        <span class="cs-header">Phone</span>
+                        <a href="tel:+19514175443" class="cs-link">(951) 417-5443
+                        </a>
+                    </div>
+                </li>
+                <li class="cs-li">
+                    <picture class="cs-icon-wrapper">
+                        <img aria-hidden="true" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/mail-76.svg" alt="phone icon" class="cs-icon" width="40" height="40" decoding="async">
+                    </picture>
+                    <div class="cs-flex-group">
+                        <span class="cs-header">Email</span>
+                        <a href="mailto:info@coupleconnectionsd.com" class="cs-link">info@coupleconnectionsd.com</a>
+                    </div>
+                </li>
+                <li class="cs-li">
+                    <picture class="cs-icon-wrapper">
+                        <img aria-hidden="true" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/pin-76.svg" alt="address icon" class="cs-icon" width="40" height="40" decoding="async">
+                    </picture>
+                    <div class="cs-flex-group">
+                        <span class="cs-header">Address</span>
+                        <a href="https://www.google.com/maps/place/Lakes+Therapy+and+Counseling+Center/@33.5521009,-117.2086153,15z/data=!4m2!3m1!1s0x0:0x8b02defccf2ddde1?sa=X&ved=1t:2428&ictx=111" class="cs-link">41856 Ivy St STE 205, Murrieta, CA 92562</a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <!--Form-->
+        <form class="cs-form" id="cs-form-1389" name="Contact Form" method="post">
+            <h3 class="cs-h3">Send Us A Message</h3>
+            <label class="cs-label">
+                Name
+                <input class="cs-input" required type="text" id="name-1389" name="name" placeholder="Name">
+            </label>
+            <label class="cs-label cs-email">
+                Email
+                <input class="cs-input" required type="email" id="email-1389" name="email" placeholder="Email">
+            </label>
+            <label class="cs-label cs-phone">
+                Phone
+                <input class="cs-input" required type="number" id="phone-1389" name="phone" placeholder="Phone">
+            </label>
+            <label class="cs-label">
+                Message
+                <textarea class="cs-input cs-textarea" required name="Message" id="message-1389" placeholder="Write message..."></textarea>
+            </label>
+            <button class="cs-button-solid cs-submit" type="submit">Send Message</button>
+        </form>
+    </div>
+</section>
                                 
 <!-- ============================================ -->
 <!--                 Side By Side                 -->
