--- a/src/content/pages/location.html
+++ b/src/content/pages/location.html
@@ -2,7 +2,7 @@
 title: 'Couples Therapy Murrieta'
 description: ''
 preloadImg: '/assets/images/cabinets2.jpg'
-permalink: 'couples-therapy-murrieta/'
+permalink: 'couples/'
 eleventyNavigation:
     key: 
     order: 200
@@ -93,6 +93,7 @@ eleventyNavigation:
         <iframe loading="lazy" src="https://storage.googleapis.com/maps-solutions-9wit5a4eqq/locator-plus/xm7x/locator-plus.html" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
 </section>
+
                                 
 <!-- ============================================ -->
 <!--                 Side By Side                 -->
