--- a/src/content/pages/location.html
+++ b/src/content/pages/location.html
@@ -49,7 +49,7 @@ eleventyNavigation:
     <picture class="cs-background">
         <source media="(max-width: 600px)" srcset="https://murrieta-therapy.b-cdn.net/All-The-Benefits-of-Couples-Therapy-with-Lakes-Therapy-and-Counseling-Center.jpg">
         <source media="(min-width: 601px)" srcset="https://murrieta-therapy.b-cdn.net/All-The-Benefits-of-Couples-Therapy-with-Lakes-Therapy-and-Counseling-Center.jpg">
-        <img decoding="async" src="https://murrieta-therapy.b-cdn.net/All-The-Benefits-of-Couples-Therapy-with-Lakes-Therapy-and-Counseling-Center.jpg" alt="web designer" width="2250" height="1500" aria-hidden="true" caption="John Bacon Gilbert">
+        <img decoding="async" src="https://murrieta-therapy.b-cdn.net/All-The-Benefits-of-Couples-Therapy-with-Lakes-Therapy-and-Counseling-Center.jpg" alt="web designer" width="2250" height="1500" aria-hidden="true">
     </picture>
 </section>
 
