--- a/src/content/pages/location.html
+++ b/src/content/pages/location.html
@@ -695,7 +695,7 @@ eleventyNavigation:
                 <source media="(max-width: 600px)" srcset="https://murrieta-therapy.b-cdn.net/middle-aged-couple-doing-yardwork.webp">
                 <!--Tablet and above Image-->
                 <source media="(min-width: 601px)" srcset="https://murrieta-therapy.b-cdn.net/middle-aged-couple-doing-yardwork.webp">
-                <img loading="lazy" decoding="async" src="https://murrieta-therapy.b-cdn.net/middle-aged-couple-doing-yardwork.webp" alt="Marriage Counseling Murrieta in Murrieta, CA width="388" height="388">
+                <img loading="lazy" decoding="async" src="https://murrieta-therapy.b-cdn.net/middle-aged-couple-doing-yardwork.webp" alt="Marriage Counseling Murrieta in Murrieta, CA" width="388" height="388">
             </picture>
             <picture class="cs-floater">
                 <img class="cs-floater-icon" loading="lazy" decoding="async" src="https://murrieta-therapy.b-cdn.net/heart.png" alt="Heart icon" width="59" height="48">
