--- a/src/content/pages/location.html
+++ b/src/content/pages/location.html
@@ -1,10 +1,10 @@
 ---
 title: 'Couples Therapy Murrieta'
 description: ''
-preloadImg: '/assets/images/cabinets2.jpg'
-permalink: 'couples/'
+preloadImg: 'https://murrieta-therapy.b-cdn.net/All-The-Benefits-of-Couples-Therapy-with-Lakes-Therapy-and-Counseling-Center.jpg'
+permalink: 'couples-therapy-murrieta/'
 eleventyNavigation:
-    key: 
+    key:
     order: 200
 ---
 
