--- a/src/content/pages/location.html
+++ b/src/content/pages/location.html
@@ -11,7 +11,7 @@ eleventyNavigation:
 {% extends "layouts/base.html" %}
 
 {% block head %}
-    <link rel="stylesheet" href="/assets/css/services.css">
+    <link rel="stylesheet" href="/assets/css/location.css">
     <script defer src="/assets/js/locationfaq.js"></script>
     <script src="https://plugin-api-4.nytroseo.com/api/site/31aac8af-082d-49bb-9474-11f3921770ff/nytroseo.min.js" ></script>
     <!-- Google tag (gtag.js) -->
