--- a/src/content/pages/location.html
+++ b/src/content/pages/location.html
@@ -5,7 +5,7 @@ preloadImg: 'https://murrieta-therapy.b-cdn.net/All-The-Benefits-of-Couples-Ther
 permalink: 'couples-therapy-murrieta/'
 eleventyNavigation:
     key:
-    order: 200
+    order:
 ---
 
 {% extends "layouts/base.html" %}
