--- a/src/content/pages/schedule.html
+++ b/src/content/pages/schedule.html
@@ -65,7 +65,7 @@ eleventyNavigation:
                     <option value="family therapy">Family Therapy</option>
                 </select>
             </label>
-            <label class="cs-label-message">
+            <label class="cs-label">
                 Anything You'd Like Us To Know?
                 <textarea required name="Message" id="message" placeholder="If you'd like to tell us about how we can help, add it here."></textarea>
             </label>
