--- a/src/content/pages/schedule.html
+++ b/src/content/pages/schedule.html
@@ -65,6 +65,10 @@ eleventyNavigation:
                     <option value="family therapy">Family Therapy</option>
                 </select>
             </label>
+            <label class="cs-label">
+                How Did You Find Us
+                <input class="cs-input" type="text" id="find-485" name="find-us" placeholder="How did you find us?">
+            </label>
             <button class="cs-button-solid cs-submit" type="submit">Submit</button>
         </form>
     </div>
