--- a/src/content/pages/schedule.html
+++ b/src/content/pages/schedule.html
@@ -66,8 +66,8 @@ eleventyNavigation:
                 </select>
             </label>
             <label class="cs-label">
-                How Did You Find Us
-                <input class="cs-input" type="text" id="find-485" name="find-us" placeholder="How did you find us?">
+                Anything You'd Like Us To Know?
+                <input class="cs-input" type="text" id="find-485" name="find-us" placeholder="If there's anything you'd like to tell us about the therapy you're seeking, let us know here.">
             </label>
             <button class="cs-button-solid cs-submit" type="submit">Submit</button>
         </form>
