--- a/src/content/pages/schedule.html
+++ b/src/content/pages/schedule.html
@@ -65,7 +65,7 @@ eleventyNavigation:
                     <option value="family therapy">Family Therapy</option>
                 </select>
             </label>
-            <label class="cs-label cs-label-message2">
+            <label class="cs-label">
                 Anything You'd Like Us To Know?
                 <input class="cs-input" type="text" id="find-485" name="find-us" placeholder="If there's anything you'd like to tell us about the therapy you're seeking, let us know here.">
             </label>
