--- a/src/content/pages/schedule.html
+++ b/src/content/pages/schedule.html
@@ -67,7 +67,7 @@ eleventyNavigation:
             </label>
             <label class="cs-label">
                 Anything You'd Like Us To Know?
-                <input class="cs-input" type="text" id="find-485" name="find-us" placeholder="How did you find us?">
+                <input class="cs-textarea" type="text" id="find-485" name="find-us" placeholder="How did you find us?">
             </label>
             <button class="cs-button-solid cs-submit" type="submit">Submit</button>
         </form>
