--- a/src/content/pages/schedule.html
+++ b/src/content/pages/schedule.html
@@ -67,7 +67,7 @@ eleventyNavigation:
             </label>
             <label class="cs-label">
                 Anything You'd Like Us To Know?
-                <textarea class="cs-textarea" type="text" id="find-485" name="find-us" placeholder="If you'd like, you can give us info info about why you're seeking therapy or what you're seeking therapy for."></textarea>
+                <textarea class="cs-textarea" type="text" id="find-485" name="info" placeholder="If you'd like, you can give us info info about why you're seeking therapy or what you're seeking therapy for."></textarea>
             </label>
             <button class="cs-button-solid cs-submit" type="submit">Submit</button>
         </form>
