--- a/src/content/pages/schedule.html
+++ b/src/content/pages/schedule.html
@@ -35,7 +35,7 @@ eleventyNavigation:
         <div class="cs-content">
             <h1 class="cs-title">Request Your Free <span class="cs-color">15 Minute Consultation!</span></h1>
             <p class="cs-text">
-                We would love to connect with you and discuss how we can help. Please fill the form on the right side to request a call to schedule a free 15 minute consultation at a time that works for you.
+                We would love to connect with you and discuss how we can help. Please fill the form to request a call to schedule a free 15 minute consultation at a time that works for you.
             </p>
             <span class="cs-heading">Would You Rather Call or Email?</span>
             <span class="cs-heading">Contact Us Directly:</span>
