--- a/src/content/pages/services.html
+++ b/src/content/pages/services.html
@@ -176,7 +176,7 @@ eleventyNavigation:
                     </div>
                 </li>
             </ul>    
-            <a href="/schedule" class="cs-button-solid">Donate Now</a>        
+            <a href="/schedule" class="cs-button-solid">Free Consultation</a>        
         </div>
     </div>
 </section>
