--- a/src/content/pages/blog.html
+++ b/src/content/pages/blog.html
@@ -69,8 +69,8 @@ eleventyNavigation:
                                 <!--Author Image-->
                                 <picture class="blog-author-img">
                                     <img
-                                    src="/assets/svgs/profile.svg"
-                                    alt="house"
+                                    src="https://murrieta-therapy.b-cdn.net/John%20Bacon%20Gilbert_2.webp"
+                                    alt="John Bacon Gilbert"
                                     width="32"
                                     height="32"
                                     decoding="async" />
